[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
clap = { version = "4.2.1", features = ["derive"] }
mini-redis = "0.4"
tokio = { version = "1.27.0", features = ["full"] }

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "single_threaded_server"
path = "src/bin/single_threaded_server.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "mpsc_client"
path = "src/bin/mpsc_client.rs"
